force-app/main/default/objects/PDLM__Project_Stage__c/PDLM__Project_Stage__c.object-meta.xml
<CustomObject>
    <description>Project Stage</description>
    <label>Project Stage</label>
    <nameField>
        <label>Project Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>