force-app/main/default/objects/PDLM__Project_Stage__c/fields/PDLM__Archived__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>