force-app/main/default/objects/PDLM__Project_Stage__c/fields/PDLM__Status_lk__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Status_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Change Phase for the Lifecycle and Approval</description>
    <label>Status</label>
    <referenceTo>PDLM__Change_Phase__c</referenceTo>
    <relationshipLabel>Project Stages</relationshipLabel>
    <relationshipName>Project_Stages</relationshipName>
    <type>Lookup</type>
</CustomField>