force-app/main/default/objects/PDLM__Project_Stage__c/fields/PDLM__Target_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Target_Start_Date__c</fullName>
    <label>Target Start Date</label>
    <type>Date</type>
</CustomField>